--- a/style.css
+++ b/style.css
@@ -24,3 +24,11 @@
         iframe{
                 border-radius: 20px;
         }
+        .scroller{
+                height:70vh;
+                border:2px solid black;
+                overflow: auto;
+                width:30vw;
+                margin-left:50px;
+                padding-left: 30px;
+            }
